--- a/index.html
+++ b/index.html
@@ -84,36 +84,6 @@
           <span class="drawer-menu__jp-label">FAQ</span>
         </a>
       </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="https://bit.ly/onerilenekrankartlari">
-          <span class="drawer-menu__en-label">Önerilen Madenciler</span>
-          <span class="drawer-menu__jp-label">Recommended Miners</span>
-        </a>
-      </li>
-      <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/roi/">
-          <span class="drawer-menu__en-label">Roi Hesapla</span>
-          <span class="drawer-menu__jp-label">Calculate Roi</span>
-        </a>
-      </li>
-      <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="https://discord.gg/MyMZHVRvCC" target="_blank" rel="noreferrer noopener">
-          <span class="drawer-menu__en-label">Discord Sunucumuz</span>
-          <span class="drawer-menu__jp-label">You are invited to Discord</span>
-        </a>
-      </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/minietkinlik/" target="_blank" rel="noreferrer noopener">
-          <span class="drawer-menu__en-label">Mini Etkinlik Listesi</span>
-          <span class="drawer-menu__jp-label">Mini Event List</span>
-        </a>
-      </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/v2">
-          <span class="drawer-menu__en-label">V2</span>
-          <span class="drawer-menu__jp-label">Click for V2 version.</span>
-        </a>
-      </li>
 <!--===============================================================================================-->
 	  <center>
 
@@ -145,7 +115,7 @@
 <div class="head" id="cpcontainer">&nbsp;</div>
 <div class="head" id="clock"></div>
 <!--===============================================================================================-->
-
+<ins class="644bb8c31f45b6fa09a51487" style="display:inline-block;width:320px;height:50px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","644bb8c31f45b6fa09a51487",["cdn.bmcdn5.com"], 0, new Date().getTime())}();</script>
 <!--===============================================================================================-->
                                 </center>
 								</div>
