--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 	</center>
 <!--===============================================================================================-->
     <section class="container">
+	<center>
 	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center>
         <div class="row">
             <div class="col-0 col-md-1">
 
