--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <div class="head" id="cpcontainer">&nbsp;</div>
 <div class="head" id="clock"></div>
 <!--===============================================================================================-->
-	<iframe data-aa='2195009' src='//ad.a-ads.com/2195009?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+<ins class="644bb8c31f45b6fa09a51487" style="display:inline-block;width:320px;height:50px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","644bb8c31f45b6fa09a51487",["cdn.bmcdn5.com"], 0, new Date().getTime())}();</script>
 <!--===============================================================================================-->
                                 </center>
 								</div>
@@ -194,6 +194,9 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
                         </div>
 						
                             </div>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center
 	</center>
 <!--===============================================================================================-->
     <section class="container">
