--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
                             </div>
 	<center>
 	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
-	</center
+	</center>
 	</center>
 <!--===============================================================================================-->
     <section class="container">
@@ -293,7 +293,9 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
                             </div>
 <!--===============================================================================================-->
 	<center>
-	<iframe data-aa='2278581' src='//ad.a-ads.com/2278581?size=468x60' style='width:468px; height:60px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center
 	</center>
 <!--===============================================================================================-->
                     </article>
@@ -338,7 +340,9 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
 <!--===============================================================================================-->
 	<center>
 <!--===============================================================================================-->
-	<iframe data-aa='2263117' src='//ad.a-ads.com/2263117?size=320x100' style='width:320px; height:100px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center
 <!--===============================================================================================-->
 	</center>
 <!--===============================================================================================-->
@@ -383,7 +387,9 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
 <!-- Grid container -->
   <div class="footerarkaplan p-1">
   	<center>
-	<iframe data-aa='2278584' src='//ad.a-ads.com/2278584?size=320x50' style='width:320px; height:50px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center
 	</center>
     <!-- Section: Social media -->
     <section>
