--- a/index.html
+++ b/index.html
@@ -104,42 +104,6 @@
           <span class="drawer-menu__jp-label">FAQ</span>
         </a>
       </li>
-	  <!--li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/kazanchesapla/">
-          <span class="drawer-menu__en-label">En İyi Kazanç Hesapla</span>
-          <span class="drawer-menu__jp-label">Calculate the Best Profit</span>
-        </a>
-      </li-->
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/onemlivideolar">
-          <span class="drawer-menu__en-label">RollerCoin Önemli Bilgiler</span>
-          <span class="drawer-menu__jp-label">RollerCoin Important Information</span>
-        </a>
-      </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="https://bit.ly/onerilenekrankartlari">
-          <span class="drawer-menu__en-label">Önerilen Madenciler</span>
-          <span class="drawer-menu__jp-label">Recommended Miners</span>
-        </a>
-      </li>
-      <!--li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/roi/">
-          <span class="drawer-menu__en-label">Roi Hesapla</span>
-          <span class="drawer-menu__jp-label">Calculate Roi</span>
-        </a>
-      </li-->
-      <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="https://discord.gg/UBxC55xm3m" target="_blank" rel="noreferrer noopener">
-          <span class="drawer-menu__en-label">Discord Sunucumuz</span>
-          <span class="drawer-menu__jp-label">You are invited to Discord</span>
-        </a>
-      </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/v2">
-          <span class="drawer-menu__en-label">V2</span>
-          <span class="drawer-menu__jp-label">Click for V2 version.</span>
-        </a>
-      </li>
     </ul>
 	
     <div class="drawer-menu__close-button">
@@ -170,6 +134,9 @@
                             </div>
 <!--===============================================================================================-->
 	<center>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center>
                         <div class="container-convert col-12 col-md-10">
 						<div class="card-fc my-1">
                                 <h6 class="card-header head">📌 DUYURU / BİLGİLENDİRME</h6>
@@ -293,9 +260,7 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
                             </div>
 <!--===============================================================================================-->
 	<center>
-	<center>
-	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
-	</center
+
 	</center>
 <!--===============================================================================================-->
                     </article>
@@ -340,9 +305,6 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
 <!--===============================================================================================-->
 	<center>
 <!--===============================================================================================-->
-	<center>
-	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
-	</center
 <!--===============================================================================================-->
 	</center>
 <!--===============================================================================================-->
@@ -379,6 +341,9 @@ Size tüm bilgiler sunulmuştur! Lütfen sitemizin sağ üst kısmındaki menüy
                 </div>
             </div>
     </section>
+	<center>
+	<ins class="655a6ef6f081d93070554ff9" style="display:inline-block;width:1px;height:1px;"></ins><script>!function(e,n,c,t,o,r,d){!function e(n,c,t,o,r,m,d,s,a){s=c.getElementsByTagName(t)[0],(a=c.createElement(t)).async=!0,a.src="https://"+r[m]+"/js/"+o+".js?v="+d,a.onerror=function(){a.remove(),(m+=1)>=r.length||e(n,c,t,o,r,m)},s.parentNode.insertBefore(a,s)}(window,document,"script","655a6ef6f081d93070554ff9",["cdn.bmcdn6.com"], 0, new Date().getTime())}();</script>
+	</center>
                         <div class="container-convert col-12 col-md-10">
 						<div class="card-fc my-1">
                                 <h6 class="card-header head">🔗 SOSYAL MEDYA HESAPLARIMIZ</h6>
