--- a/index.html
+++ b/index.html
@@ -86,24 +86,9 @@
 <div id="js-menu-content" class="drawer-menu" aria-label="メニュー" style="display:none">
   <div class="drawer-menu__container">
     <ul class="drawer-menu__list">
-      <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/hakkimizda/">
-          <span class="drawer-menu__en-label">Hakkımızda</span>
-          <span class="drawer-menu__jp-label">About us</span>
-        </a>
-      </li>
-	  <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/nasilkullanilir/">
-          <span class="drawer-menu__en-label">Nasıl Kullanılır?</span>
-          <span class="drawer-menu__jp-label">How to use</span>
-        </a>
-      </li>
-      <li class="drawer-menu__item">
-        <a class="drawer-menu__link" href="./sayfa/sss/">
-          <span class="drawer-menu__en-label">S.S.S</span>
-          <span class="drawer-menu__jp-label">FAQ</span>
-        </a>
-      </li>
+      <center>
+	Bu web site test amaçlı açılmıştır!
+	</center>
     </ul>
 	
     <div class="drawer-menu__close-button">
